tests/fixtures/invalid/pow_bool_bool_list.py
# Cannot call pow() with Bool, Bool, List[int]
x = pow(True, True, [1, 2, 3])
